--- a/css/media.css
+++ b/css/media.css
@@ -97,6 +97,10 @@
   .r-box .menu-icon {display: block;}
   .menu-box {display: none;}
   .mainment {font-size: 30px;}
+  .top ul li.s2 .text {
+    white-space: normal; word-break: keep-all; padding: 0 20px; width: calc(100% - 40px);
+    
+  }
 
   .container1 {padding-top: 80px;}
   .top-box {height: 220px;}
@@ -114,7 +118,7 @@
   .c-box ul>li {width: 300px;}
   .pro-box img {width: 300px; height: 294px;}
 
-  .img-box {padding: 40px 0;}
+  .img-box {padding: 40px 20px;}
   .img-box img {width: 156px; height: 60px;}
   .img-box p {font-size: 14px; line-height: 1.5;}
   .none5 {display: inline;}
@@ -122,13 +126,13 @@
 
   .container3 {padding: 40px 20px 80px 20px;}
   .flavor-wrap {
-    width: 356px; margin: 0 auto; scroll-snap-type: x mandatory;
+    width: 300px; margin: 0 auto; scroll-snap-type: x mandatory;
     padding-bottom: 30px;
   }
   .flavor {width: max-content;}
   .flavor a {scroll-snap-align: start;}
   .f-right-box {display: flex; flex-direction: row; flex-wrap: nowrap;}
-  .flavor img {width: 356px; height: 356px;}
+  .flavor img {width: 300px; height: 300px;}
   .f-bottom-box {margin-top: 0; margin-left: 16px;}
 
   footer {padding: 40px 20px;}
